# photon

./: Cargo.toml  README.md  Rocket.toml  sql.sql
src/: main.rs
static/: error.html.tera  image.html.tera  index.html.tera
